@@ -193,12 +193,11 @@ shared library. For this backend to work, the `pcre2` shared library must be ins
 ### `ffm`
 
 The `ffm` backend uses
-the [Foreign Functions and Memory API](https://docs.oracle.com/en/java/javase/21/core/foreign-function-and-memory-api.html)
+the [Foreign Functions and Memory API](https://docs.oracle.com/en/java/javase/22/core/foreign-function-and-memory-api.html)
 to invoke the `pcre2` shared library. For this backend to work, the `pcre2` shared library must be installed on the
 system and be visible via `java.library.path`.
 
-Note that `--enable-preview` must be passed to the Java compiler to enable the preview features for this backend to be
-used.
+Note that Java 22 or later is required for the FFM backend as the Foreign Function & Memory API was finalized in Java 22.
 
 ## Javadoc
 
